--- a/journalApp2.0/Views/Windows/Window1.xaml
+++ b/journalApp2.0/Views/Windows/Window1.xaml
@@ -1,12 +1,28 @@
-﻿<Window x:Class="journalApp2._0.Views.Windows.Window1"
+﻿<Window x:Class="journalApp2._0.Window1"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:journalApp2._0.Views.Windows"
+        xmlns:vm="clr-namespace:journalApp2._0.ViewModels"
+        xmlns:local="clr-namespace:journalApp2._0"
         mc:Ignorable="d"
         Title="Window1" Height="450" Width="800">
+    <Window.DataContext>
+        <vm:Window1ViewModel/>
+    </Window.DataContext>
     <Grid>
-        
+        <Label Content="первая трапеция" HorizontalAlignment="Left" Margin="55,10,0,0" VerticalAlignment="Top" Width="110"/>
+        <Label Content="вторая трапеция" HorizontalAlignment="Left" Margin="337,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.526,-0.192"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="55,65,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="337,65,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Высота" HorizontalAlignment="Left" Margin="55,41,0,0" VerticalAlignment="Top"/>
+        <Label Content="Высота" HorizontalAlignment="Left" Margin="337,36,0,0" VerticalAlignment="Top"/>
+        <Label Content="Основание" HorizontalAlignment="Left" Margin="55,93,0,0" VerticalAlignment="Top"/>
+        <Label Content="Основание" HorizontalAlignment="Left" Margin="337,93,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="55,132,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="337,132,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Вычислим!" HorizontalAlignment="Left" Margin="220,180,0,0" VerticalAlignment="Top" Width="75"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="88,224,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
