--- a/journalApp2.0/Views/Windows/Window1.xaml
+++ b/journalApp2.0/Views/Windows/Window1.xaml
@@ -13,8 +13,8 @@
     <Grid>
         <Label Content="первая трапеция" HorizontalAlignment="Left" Margin="55,10,0,0" VerticalAlignment="Top" Width="110"/>
         <Label Content="вторая трапеция" HorizontalAlignment="Left" Margin="337,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.526,-0.192"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="55,65,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="337,65,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="55,65,0,0" TextWrapping="Wrap" Text="{Binding Height1}" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="337,65,0,0" TextWrapping="Wrap" Text="{Binding Height1}" VerticalAlignment="Top" Width="120"/>
         <Label Content="Высота" HorizontalAlignment="Left" Margin="55,41,0,0" VerticalAlignment="Top"/>
         <Label Content="Высота" HorizontalAlignment="Left" Margin="337,36,0,0" VerticalAlignment="Top"/>
         <Label Content="Основание" HorizontalAlignment="Left" Margin="55,93,0,0" VerticalAlignment="Top"/>
@@ -22,7 +22,8 @@
         <TextBox HorizontalAlignment="Left" Height="23" Margin="55,132,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="337,132,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Button Content="Вычислим!" HorizontalAlignment="Left" Margin="220,180,0,0" VerticalAlignment="Top" Width="75"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="88,224,0,0" VerticalAlignment="Top"/>
+        <Label Content="" HorizontalAlignment="Left" Margin="88,224,0,0" VerticalAlignment="Top"/>
+        <Label Content="" HorizontalAlignment="Left" Margin="370,224,0,0" VerticalAlignment="Top" RenderTransformOrigin="8.474,0.615"/>
 
     </Grid>
 </Window>
