--- a/journalApp2.0/Views/Windows/Window1.xaml
+++ b/journalApp2.0/Views/Windows/Window1.xaml
@@ -14,16 +14,19 @@
         <Label Content="первая трапеция" HorizontalAlignment="Left" Margin="55,10,0,0" VerticalAlignment="Top" Width="110"/>
         <Label Content="вторая трапеция" HorizontalAlignment="Left" Margin="337,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.526,-0.192"/>
         <TextBox HorizontalAlignment="Left" Height="23" Margin="55,65,0,0" TextWrapping="Wrap" Text="{Binding Height1}" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="337,65,0,0" TextWrapping="Wrap" Text="{Binding Height1}" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="337,65,0,0" TextWrapping="Wrap" Text="{Binding Height2}" VerticalAlignment="Top" Width="120"/>
         <Label Content="Высота" HorizontalAlignment="Left" Margin="55,41,0,0" VerticalAlignment="Top"/>
         <Label Content="Высота" HorizontalAlignment="Left" Margin="337,36,0,0" VerticalAlignment="Top"/>
         <Label Content="Основание" HorizontalAlignment="Left" Margin="55,93,0,0" VerticalAlignment="Top"/>
         <Label Content="Основание" HorizontalAlignment="Left" Margin="337,93,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="55,132,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Height="23" Margin="337,132,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Вычислим!" HorizontalAlignment="Left" Margin="220,180,0,0" VerticalAlignment="Top" Width="75"/>
-        <Label Content="" HorizontalAlignment="Left" Margin="88,224,0,0" VerticalAlignment="Top"/>
-        <Label Content="" HorizontalAlignment="Left" Margin="370,224,0,0" VerticalAlignment="Top" RenderTransformOrigin="8.474,0.615"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="55,132,0,0" TextWrapping="Wrap" Text="{Binding Base11}" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="337,132,0,0" TextWrapping="Wrap" Text="{Binding Base21}" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Вычислим!" HorizontalAlignment="Left" Margin="220,285,0,0" VerticalAlignment="Top" Width="75" Command="{Binding TrapCommand}" RenderTransformOrigin="0.6,4.75"/>
+        <Label Content="{Binding Result }" HorizontalAlignment="Left" Margin="250,340,0,0" VerticalAlignment="Top"/>
+        <Label Content="Основание" HorizontalAlignment="Left" Margin="55,181,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="55,220,0,0" TextWrapping="Wrap" Text="{Binding Base12}" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Основание" HorizontalAlignment="Left" Margin="337,181,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Height="23" Margin="337,220,0,0" TextWrapping="Wrap" Text="{Binding Base22}" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
